PRACTICA 10/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    app: logging
